--- a/resources/sass/app.scss
+++ b/resources/sass/app.scss
@@ -76,6 +76,12 @@ a {
 
 /* 商品列表页样式 开始 */
 .products-index-page {
+  .search-form {
+    padding: 0 5px 10px;
+    margin-bottom: 10px;
+    border-bottom: 1px solid #eee;
+  }
+
   .products-list {
     padding: 0 15px;
     .product-item {
@@ -133,6 +139,7 @@ a {
       }
     }
   }
+  
   .pagination {
     margin-right: 5px;
   }
