用户界面 - 收藏商品列表

--- a/resources/sass/app.scss
+++ b/resources/sass/app.scss
@@ -76,7 +76,8 @@ a {
 
 
 /* 商品列表页样式 开始 */
-.products-index-page {
+.products-index-page,
+.products-favorites-page {
   .search-form {
     padding: 0 5px 10px;
     margin-bottom: 10px;
