--- a/resources/sass/app.scss
+++ b/resources/sass/app.scss
@@ -5,6 +5,9 @@
 // Bootstrap
 @import '~bootstrap/scss/bootstrap';
 
+// 引入字体图标
+@import "~@fortawesome/fontawesome-free/css/all.css";
+
 /* universal */
 
 body {
@@ -273,3 +276,51 @@ a {
   }
 }
 /* 商品详情页样式 结束 */
+
+/* 购物车列表页样式 开始 */
+.cart-index-page {
+  .product_list {
+    .preview {
+      img {
+        max-width: 80px;
+        max-height: 80px;
+      }
+      margin-right: 20px;
+    }
+
+    .product_info {
+      display: flex;
+      flex-direction: row;
+      align-items: flex-start;
+      font-size: 12px;
+      .product_title, .sku_title, .warning {
+        display: block;
+      }
+
+      .product_title a {
+        color: #3c3c3c;
+        font-size: 14px;
+      }
+      .not_on_sale {
+        .product_title, .sku_title {
+          text-decoration: line-through;
+        }
+        .warning {
+          color: red;
+        }
+      }
+    }
+
+    .price {
+      font-size: 12px;
+      font-weight: 700;
+      color: #3c3c3c;
+    }
+
+    input.amount {
+      width: 60px;
+      border-radius: 0 !important;
+    }
+  }
+}
+/* 购物车列表页样式 结束 */
